kubernetes/service-backend1.yaml
# Microservice backend 1.

kind: Deployment
apiVersion: apps/v1
metadata:
  name: service-backend1
  labels:
    app: service-backend1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-backend1
  template:
    metadata:
      labels:
        app: service-backend1
    spec:
      containers:
      - name: service-backend1-pods

        image: kdidi/ms-k8s-service-backend1:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3010

        livenessProbe:
          httpGet:
            path: /api/health
            port: 3010
          initialDelaySeconds: 3
          periodSeconds: 20

        resources:
          requests:
            memory: "256M"
            cpu: 0.25

---
kind: Service
apiVersion: v1
metadata:
  name: service-backend1-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3010
  selector:
    app: service-backend1
