kubernetes/service-frontend.yaml
# Microservice service-frontend.

kind: Deployment
apiVersion: apps/v1
metadata:
  name: service-frontend
  labels:
    app: service-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-frontend
  template:
    metadata:
      labels:
        app: service-frontend
    spec:
      containers:
      - name: service-frontend-pods

        image: kdidi/ms-k8s-service-frontend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 20

        resources:
          requests:
            memory: "64M"
            cpu: 0.125

---
kind: Service
apiVersion: v1
metadata:
  name: service-frontend-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: service-frontend
