kubernetes/ingress.yaml
# Ingress routing.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /api/config
        backend:
          service: 
            name: service-frontend-svc
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service: 
            name: service-backend1-svc
            port:
              number: 80
      - pathType: Prefix  
        path: /
        backend:
          service: 
            name: service-frontend-svc
            port:
              number: 80
